# async

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  readme.md
src/: alwayscopyable.hpp  async.cpp  async.hpp  async_test.cpp  callback.hpp  callbacks.hpp  canceller.hpp  future.hpp  mempool.hpp  poolptr.hpp  worker.cpp  worker.hpp  workerpool.cpp  workerpool.hpp  workerpoolwrapper.hpp
src/v1/: async.cpp  callback.hpp  canceller.hpp
src/v2/: callbackmanager.hpp
src/v3/: callbackowner.hpp  refcounter.cpp  refcounter.hpp
tests/: async_test.cpp  callbackv1_test.cpp  callbackv2_test.cpp  callbackv3_test.cpp  worker_test.cpp
